add tests + quality code + update pyptoject.toml + ci/yml

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip install flake8 black
 
       - name: Lint code
         run: flake8 .
