--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,23 @@
-[tool.uv]
+[project]
 name = "instru-sense"
 version = "0.1.0"
+requires-python = ">=3.10"
+dependencies = [
+    "fastapi",
+    "uvicorn",
+    "httpx",
+    "torch",
+    "torchaudio",
+    "pyyaml",
+    "numpy>=2.2.6",
+    "pytest>=9.0.2",
+]
+
+[tool.uv]
+dev-dependencies = [
+    "pytest",
+    "pytest-asyncio",
+]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
