--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,13 @@
-[tool.uv]
+[project]
 name = "instru-sense"
 version = "0.1.0"
+description = "Reconnaissance d'instruments de musique"
+requires-python = ">=3.11"
+dependencies = [
+    "fastapi>=0.127.0",
+    "python-multipart>=0.0.21",
+    "uvicorn>=0.40.0",
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["apps", "core", "services", "infra"]
