--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -19,7 +19,7 @@ jobs:
           pip install flake8 black
 
       - name: Lint code
-        run: flake8 .
+        run: flake8 . --max-line-length=120 --extend-ignore=E203,W391 --exclude=.venv,generator-archi.py
 
       - name: Format code
         run: black --check .
