--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Format code
         run: black --check .
 
-      # - name: Run tests
-      #   run: |
-      #     pytest tests/
+      - name: Run tests
+        run: |
+          pytest tests/unit/
