--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "numpy>=2.2.6",
     "pytest>=9.0.2",
     "python-multipart>=0.0.21",
+    "torchcodec>=0.9.1",
+    "soundfile>=0.13.1",
 ]
 
 [tool.uv]
