--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install flake8 black
+          pip install flake8 black pytest pydantic
 
       - name: Lint code
         run: flake8 . --max-line-length=120 --extend-ignore=E203,W391 --exclude=.venv,generator-archi.py
