--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -14,16 +14,21 @@ jobs:
         with:
           python-version: '3.12'
 
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
       - name: Install dependencies
         run: |
-          pip install flake8 black pytest pydantic
+          uv sync
 
       - name: Lint code
-        run: flake8 . --max-line-length=120 --extend-ignore=E203,W391 --exclude=.venv,generator-archi.py
+        run: uv run flake8 . --max-line-length=120 --extend-ignore=E203,W391 --exclude=.venv,generator-archi.py
 
       - name: Format code
-        run: black --check .
+        run: uv run black --check .
 
       - name: Run tests
         run: |
-          pytest tests/unit/
+          uv run pytest tests/unit/
